--- a/Jiu Jitsu Assistant/MindMaps.xaml
+++ b/Jiu Jitsu Assistant/MindMaps.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:Jiu_Jitsu_Assistant"        
         xmlns:extToolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="MindMaps"       
+        Title="{DynamicResource MindMaps_Title}"       
         ResizeMode="NoResize"         
         Icon="/images/bjj-logo.png"
         Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
@@ -20,11 +20,11 @@
          <ColumnDefinition Width="900" Name="gameplayColumn" />
       </Grid.ColumnDefinitions>
 
-      <Label x:Name="label1" Content="Settings" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Grid.Column="0" Width="69" Foreground="Black" FontSize="16"/>
+      <Label x:Name="label1" Content="{DynamicResource Settings_Label_Playboard}" HorizontalAlignment="Left" Margin="42,20,0,0" VerticalAlignment="Top" Grid.Column="0" Width="69" Foreground="Black" FontSize="16"/>
       <Border x:Name="CanvasBorder" BorderBrush="Black" BorderThickness="3" Margin="38,45,36,507">
          <Canvas HorizontalAlignment="Left" Margin="24,5,0,0" Width="270" Grid.Column="0" Height="198" VerticalAlignment="Top">
-            <Button x:Name="newRoundButton" Content="New round" Style="{StaticResource StyleButton}" Canvas.Left="158" Canvas.Top="130" Width="102" Height="40" FontSize="14" Click="newRoundClicked" IsEnabledChanged="newRoundButton_IsEnabledChanged"/>
-            <Button x:Name="resetButton" Content="Reset settings" Style="{StaticResource StyleButton}" Canvas.Left="10" Canvas.Top="130" Width="102" Height="40" FontSize="14"  Click="resetClicked" IsEnabledChanged="newRoundButton_IsEnabledChanged"/>
+            <Button x:Name="newRoundButton" Content="{DynamicResource NewRoundButton_Playboard}" Style="{StaticResource StyleButton}" Canvas.Left="158" Canvas.Top="130" Width="102" Height="40" FontSize="14" Click="newRoundClicked" IsEnabledChanged="newRoundButton_IsEnabledChanged"/>
+            <Button x:Name="resetButton" Content="{DynamicResource ResetButton_Playboard}" Style="{StaticResource StyleButton}" Canvas.Left="10" Canvas.Top="130" Width="102" Height="40" FontSize="14"  Click="resetClicked" IsEnabledChanged="newRoundButton_IsEnabledChanged"/>
             <ComboBox x:Name="difficultyCombobox" Canvas.Left="10" Canvas.Top="21"  VerticalContentAlignment="Center" HorizontalContentAlignment ="Center"  Width="250" Height="36">
                <ComboBoxItem Content="Easy" IsSelected="true">
                   <ComboBoxItem.Tag>
@@ -47,10 +47,10 @@
          </Canvas>
       </Border>
 
-      <extToolkit:WatermarkTextBox x:Name="setup_textBox" Watermark="Setup"  HorizontalAlignment="Left" Height="80" Margin="42,646,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0" TextChanged="enableTechniques"/>
-      <Label x:Name="label" Content="Current position:" HorizontalAlignment="Left" Margin="42,533,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
+      <extToolkit:WatermarkTextBox x:Name="setup_textBox" Watermark="{DynamicResource SetupWatermark_Playboard}"  HorizontalAlignment="Left" Height="80" Margin="42,646,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="322" Grid.Column="0" TextChanged="enableTechniques"/>
+      <Label x:Name="label" Content="{DynamicResource CurrPosLabel_Playboard}" HorizontalAlignment="Left" Margin="42,533,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
       <Label x:Name="currentPositionLabel" Content="none" HorizontalAlignment="Left" Margin="155,529,0,0" VerticalAlignment="Top" FontSize="18" Foreground="Green" RenderTransformOrigin="0.28,-0.235"/>
-      <Label x:Name="label_Copy" Content="Last technique:" HorizontalAlignment="Left" Margin="42,568,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
+      <Label x:Name="label_Copy" Content="{DynamicResource LastTechLabel_Playboard}" HorizontalAlignment="Left" Margin="42,568,0,0" VerticalAlignment="Top" FontSize="14" Foreground="Black" Grid.Column="0"/>
       <Label Width="214" HorizontalAlignment="Left" Foreground="Green" FontSize="18" Target="{Binding ElementName=lastTechniqueLabel}" Margin="150,568,0,125" >
          <AccessText Name="lastTechniqueLabel" Text="-" TextWrapping="WrapWithOverflow" Width="209" Height="64">
          </AccessText>
@@ -81,7 +81,7 @@
       <UniformGrid x:Name="buttonsGrid" Grid.Column="2">
 
       </UniformGrid>
-      <Label x:Name="label2" Foreground="Black" Content="Sequence:" FontSize="14" HorizontalAlignment="Left" Margin="42,335,0,0" VerticalAlignment="Top"/>
+      <Label x:Name="label2" Foreground="Black" Content="{DynamicResource SequenceLabel_Playboard}" FontSize="14" HorizontalAlignment="Left" Margin="42,335,0,0" VerticalAlignment="Top"/>
       <TextBlock x:Name="sequence_textblock" HorizontalAlignment="Left" Margin="127,342,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="130" Width="237"/>
 
    </Grid>
